1.5/_sources/modules/generated/sklearn.preprocessing.KernelCenterer.rst.txt
KernelCenterer
==============

.. currentmodule:: sklearn.preprocessing

.. autoclass:: KernelCenterer
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.preprocessing.KernelCenterer sklearn.preprocessing.KernelCenterer.__init__ sklearn.preprocessing.KernelCenterer.fit sklearn.preprocessing.KernelCenterer.fit_transform sklearn.preprocessing.KernelCenterer.get_feature_names_out sklearn.preprocessing.KernelCenterer.get_metadata_routing sklearn.preprocessing.KernelCenterer.get_params sklearn.preprocessing.KernelCenterer.set_fit_request sklearn.preprocessing.KernelCenterer.set_output sklearn.preprocessing.KernelCenterer.set_params sklearn.preprocessing.KernelCenterer.set_transform_request sklearn.preprocessing.KernelCenterer.transform 
   :add-heading: Gallery examples
   :heading-level: -